<resources>
    <string name="app_name">Time Tracker AI</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="enteryourphonenumber">Enter your phone number here</string>
    <string name="send">SEND</string>
    <string name="pinhint">Enter PIN here</string>
    <string name="confirm">CONFIRM</string>
    <string name="waitphone">Verifying phone number</string>
    <string name="couldntstore">Could not store user in database, please retry</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="givepermission">Give Permission</string>
    <string name="statistics">Statistics</string>
    <string name="profile">Profile</string>
    <string name="emptyphone">Please enter your phone number</string>
    <string name="emptypin">Please enter PIN</string>
    <string name="logininproccess">Loging in ...</string>
    <string name="ex_storage_permission">We need permission to get access to your files. In case you can not upload files to our server.</string>
    <string name="ex_location_permission">We need permission to get access to your geolocation. In case application can not get enough datas to work</string>
    <string name="oops">Ooops, something went wrong</string>
    <string name="retry">Retry</string>
    <string name="edit">EDIT</string>
    <string name="name">Name</string>
    <string name="edit_name">Enter name</string>
    <string name="edit_username">Enter username</string>
    <string name="save">save</string>
    <string name="cancel">cancel</string>
    <string name="emptyname">Please enter your name</string>
    <string name="emptyusername">Please enter username</string>
    <string name="open">Open</string>
    <string name="upload">Upload</string>
    <string name="plans">Plans</string>


    <string name="mon">Monday</string>
    <string name="tue">Tuesday</string>
    <string name="wed">Wednesday</string>
    <string name="thu">Thursday</string>
    <string name="fri">Friday</string>
    <string name="sat">Saturday</string>
    <string name="sun">Sunday</string>
    <string name="start">START</string>
    <string name="finish">FINISH</string>
    <string name="notification">Notification</string>
    <string name="before">Before</string>
    <string name="emptytask">Task can not be empty</string>

</resources>
