<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="center"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.krintos.timetrackerai.LoginActivity">
    <EditText
        android:hint="@string/enteryourphonenumber"
        android:id="@+id/phonenumber"
        android:inputType="phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/send"
        android:text="@string/send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText
        android:visibility="gone"
        android:id="@+id/pincode"
        android:inputType="number"
        android:hint="@string/pinhint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:visibility="gone"
        android:id="@+id/confirm"
        android:text="@string/confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>
