<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context="com.krintos.timetrackerai.Fragments.Helper.add_to_planner">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <TextView
        android:id="@+id/day"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <in.goodiebag.carouselpicker.CarouselPicker
        android:id="@+id/iconpicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </in.goodiebag.carouselpicker.CarouselPicker>
    <EditText
        android:id="@+id/taskname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/setstime"
            android:layout_weight="1.0"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <!--from start to finish or from and till
                -->
            <TextView
                android:text="@string/start"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/stime"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="30dp"/>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/setftime"
            android:layout_weight="1.0"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:text="@string/finish"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/ftime"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>
    </LinearLayout>


        <Switch
            android:id="@+id/notifier"
            android:padding="35dp"
            android:textAlignment="textStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notification" />

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/notification"
        android:padding="30dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
            android:layout_weight="1.0"
            android:text="@string/before"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Spinner
            android:id="@+id/minutepicker"
            android:layout_weight="1.0"
            android:text="@string/before"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
        <TextView
            android:id="@+id/customtime"
            android:visibility="gone"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>




    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/cancel"
            android:layout_weight="1.0"
            android:text="@string/cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/save"
            android:layout_weight="1.0"
            android:text="@string/save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>
</ScrollView>